--- a/templates/catalog/musician_detail.html
+++ b/templates/catalog/musician_detail.html
@@ -6,4 +6,38 @@
 
   <h3>Instruments: {{ musician.instrument_list|join:", " }}</h3>
 
+  <br>
+
+  <h3>Member of:</h3>
+  <ul>
+    {% for band in musician.bands.all %}
+      <li>{{ band.name }}</li>
+    {% endfor %}
+  </ul>
+
+  {% if musician.performance_set.first.songs.all %}
+    <h3>Songs</h3>
+    <table class="table">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Band</th>
+        <th>Album</th>
+        <th>Role</th>
+      </tr>
+    {% for performance in musician.performance_set.all %}
+      {% for song in performance.songs.all %}
+        <tr>
+          <td>{{ song.id }}</td>
+          <td>{{ song.name }}</td>
+          <td>{{ song.albums.first.band.name }}</td>
+          <td>{{ song.album_list|join:", " }}</td>
+          <td>{{ performance.instruments.all|join:", " }}</td>
+        </tr>
+      {% endfor %}
+    {% endfor %}
+    </table>
+  {% else %}
+    <p>There are no songs by this musician yet.</p>
+  {% endif %}
 {% endblock %}
