Add links between pages

--- a/templates/catalog/band_list.html
+++ b/templates/catalog/band_list.html
@@ -6,7 +6,7 @@
   {% if band_list %}
     <ul>
       {% for band in band_list %}
-        <li>{{ band.name }}</li>
+        <li><a href="{{ band.get_absolute_url }}">{{ band.name }}</a></li>
       {% endfor %}
     </ul>
   {% else %}
