--- a/templates/catalog/band_detail.html
+++ b/templates/catalog/band_detail.html
@@ -8,7 +8,7 @@
     <h3>Band members:</h3>
     <ul>
       {% for member in band.members.all %}
-        <li>{{ member.full_name }}</li>
+        <li><a href="{{ member.get_absolute_url }}">{{ member.full_name }}</a></li>
       {% endfor %}
     </ul>
   {% else %}
@@ -23,7 +23,7 @@
       {% if album.songs.all %}
         <ul>
           {% for song in album.songs.all %}
-            <li>{{ song.name }}</li>
+            <li><a href="{{ song.get_absolute_url }}">{{ song.name }}</a></li>
           {% endfor %}
         </ul>
       {% else %}
