--- a/templates/catalog/song_form.html
+++ b/templates/catalog/song_form.html
@@ -3,10 +3,31 @@
 
 {% block content %}
   <h1>Create song</h1>
-  <form action="" method="post" novalidate>
+  <form action="" method="post">
     {% csrf_token %}
-    {{ form|crispy }}
+    {{ song_creation_form|crispy }}
 
     <input type="submit" value="Create song" class="btn btn-primary" name="create-song">
   </form>
+
+  <br>
+
+  <h3>Create performance</h3>
+  <form action="" method="post">
+    {% csrf_token %}
+    {{ performance_creation_form|crispy }}
+
+    <input type="submit" value="Create performance" class="btn btn-primary" name="create-performance">
+  </form>
+
+  <br>
+
+  <h3>Create instrument</h3>
+  <form action="" method="post">
+    {% csrf_token %}
+    {{ instrument_creation_form|crispy }}
+
+    <input type="submit" value="Create performance" class="btn btn-primary" name="create-performance">
+  </form>
+
 {% endblock %}
