--- a/templates/catalog/song_detail.html
+++ b/templates/catalog/song_detail.html
@@ -24,4 +24,8 @@
 
   {% endif %}
 
+  <a href="{% url 'catalog:song-update' pk=song.id %}" class="btn btn-primary">
+    Update
+  </a>
+
 {% endblock %}
