--- a/templates/catalog/band_form.html
+++ b/templates/catalog/band_form.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Create band</h1>
+  <h1>{{ object|yesno:"Update,Create" }} band</h1>
   <form action="" method="post">
     {% csrf_token %}
     {{ form|crispy }}
 
-    <input type="submit" value="Create" class="btn btn-primary">
+    <input type="submit" value="{{ object|yesno:"Update,Create" }}" class="btn btn-primary">
   </form>
 {% endblock %}
