Add CRUD views, templated & urls for Instrument $ Genre models

--- a/templates/catalog/song_form.html
+++ b/templates/catalog/song_form.html
@@ -27,7 +27,7 @@
     {% csrf_token %}
     {{ instrument_creation_form|crispy }}
 
-    <input type="submit" value="Create performance" class="btn btn-primary" name="create-performance">
+    <input type="submit" value="Create instrument" class="btn btn-primary" name="create-performance">
   </form>
 
 {% endblock %}
