Add clickable links to pages

--- a/templates/catalog/genre_list.html
+++ b/templates/catalog/genre_list.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Genres</h1>
+  <h1>
+    Genres
+    <a href="{% url 'catalog:genre-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
   {% if genre_list %}
     <table class="table">
       <tr>
@@ -12,8 +17,12 @@
     {% for genre in genre_list %}
       <tr>
         <td>{{ genre.name }}</td>
-        <td>Update</td>
-        <td>Delete</td>
+        <td>
+          <a href="{% url 'catalog:genre-update' pk=genre.id %}">Update</a>
+        </td>
+        <td>
+          <a href="{% url 'catalog:genre-delete' pk=genre.id %}">Delete</a>
+        </td>
       </tr>
     {% endfor %}
 
