--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -12,4 +12,6 @@
   <li class="list-group-item"><a href="{% url 'catalog:musician-list' %}">All musicians</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:band-list' %}">All bands</a></li>
   <li class="list-group-item"><a href="{% url 'catalog:song-list' %}">All songs</a></li>
+  <li class="list-group-item"><a href="{% url 'catalog:instrument-list' %}">All instruments</a></li>
+  <li class="list-group-item"><a href="{% url 'catalog:genre-list' %}">All genres</a></li>
 </ul>
