--- a/templates/catalog/instrument_list.html
+++ b/templates/catalog/instrument_list.html
@@ -1,7 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-  <h1>Instruments</h1>
+  <h1>
+    Instruments
+    <a href="{% url 'catalog:instrument-create' %}" class="btn btn-primary link-to-page">
+      Create
+    </a>
+  </h1>
   {% if instrument_list %}
     <table class="table">
       <tr>
@@ -12,8 +17,12 @@
     {% for instrument in instrument_list %}
       <tr>
         <td>{{ instrument.name }}</td>
-        <td>Update</td>
-        <td>Delete</td>
+        <td>
+          <a href="{% url 'catalog:instrument-update' pk=instrument.id %}">Update</a>
+        </td>
+        <td>
+          <a href="{% url 'catalog:instrument-delete' pk=instrument.id %}">Delete</a>
+        </td>
       </tr>
     {% endfor %}
 
