--- a/templates/catalog/musician_detail.html
+++ b/templates/catalog/musician_detail.html
@@ -9,16 +9,19 @@
     </a>
   </h1>
 
-  <h3>Instruments: {{ musician.instrument_list|join:", " }}</h3>
+  {% if musician.instrument_list %}
+    <h3>Instruments: {{ musician.instrument_list|join:", " }}</h3>
+  {% endif %}
 
+  {% if musician.bands.all %}
   <br>
-
   <h3>Member of:</h3>
   <ul>
     {% for band in musician.bands.all %}
       <li><a href="{{ band.get_absolute_url }}">{{ band.name }}</a></li>
     {% endfor %}
   </ul>
+  {% endif %}
 
   {% if musician.performance_set.first.songs.all %}
     <h3>Songs</h3>
@@ -49,7 +52,12 @@
   <br>
 
   {% if musician.performance_set.all %}
-    <h4>Performances</h4>
+    <h4>
+      Performances
+      <a href="{% url 'catalog:performance-create' %}" class="btn btn-primary link-to-page">
+        Create performance
+      </a>
+    </h4>
     <table class="table">
       <tr>
         <th>ID</th>
@@ -66,5 +74,9 @@
       </tr>
     {% endfor %}
     </table>
+  {% else %}
+    <a href="{% url 'catalog:performance-create' %}" class="btn btn-primary">
+      Create performance
+    </a>
   {% endif %}
 {% endblock %}
