--- a/templates/catalog/musician_detail.html
+++ b/templates/catalog/musician_detail.html
@@ -7,6 +7,9 @@
     <a href="{% url 'catalog:musician-update' pk=musician.id %}" class="btn btn-primary link-to-page">
       Update
     </a>
+    <a href="{% url 'catalog:musician-delete' pk=musician.id %}" class="btn btn-danger link-to-page">
+      Delete
+    </a>
   </h1>
 
   {% if musician.instrument_list %}
