--- a/templates/includes/navigation.html
+++ b/templates/includes/navigation.html
@@ -2,7 +2,7 @@
     <header class="header-global">
         <nav id="navbar-main" aria-label="Primary navigation" class="navbar navbar-main navbar-expand-lg navbar-theme-primary headroom navbar-dark">
             <div class="container position-relative">
-                <a class="navbar-brand me-lg-5" href="./index.html">
+                <a class="navbar-brand me-lg-5" href="{% url 'catalog:index' %}">
                     <img class="navbar-brand-dark" src="{{ ASSETS_ROOT }}/img/brand/light.svg" alt="Logo light">
                     <img class="navbar-brand-light" src="{{ ASSETS_ROOT }}/img/brand/dark.svg" alt="Logo dark">
                 </a>
@@ -10,7 +10,7 @@
                     <div class="navbar-collapse-header">
                         <div class="row">
                             <div class="col-6 collapse-brand">
-                                <a href="./index.html">
+                                <a href="{% url 'catalog:index' %}">
                                     <img src="{{ ASSETS_ROOT }}/img/brand/dark.svg" alt="Themesberg logo">
                                 </a>
                             </div>
@@ -31,30 +31,39 @@
                                         <h6 class="d-block mb-3 text-primary">Main pages</h6>
                                         <ul class="list-style-none mb-4">
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/about.html">About</a>
+                                                <a class="megamenu-link" href="{% url 'catalog:musician-list' %}">All musicians</a>
                                             </li>
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/contact.html">Contact</a>
+                                                <a class="megamenu-link" href="{% url 'catalog:band-list' %}">All bands</a>
+                                            </li>
+                                            <li class="mb-2 megamenu-item">
+                                                <a class="megamenu-link" href="{% url 'catalog:song-list' %}">All songs</a>
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="col-6 col-lg-4">
-                                        <h6 class="d-block mb-3 text-primary">Landings</h6>
+                                        <h6 class="d-block mb-3 text-primary">Inventory</h6>
                                         <ul class="list-style-none mb-4">
                                             <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/landing-freelancer.html">Freelancer</a>
+                                                <a class="megamenu-link" href="{% url 'catalog:instrument-list' %}">All instruments</a>
+                                            </li>
+                                            <li class="mb-2 megamenu-item">
+                                                <a class="megamenu-link" href="{% url 'catalog:genre-list' %}">All genres</a>
                                             </li>
                                         </ul>
                                     </div>
                                     <div class="col-6 col-lg-4">
                                         <h6 class="d-block mb-3 text-primary">User</h6>
                                         <ul class="list-style-none mb-4">
-                                            <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/sign-in.html">Sign in</a>
-                                            </li>
-                                            <li class="mb-2 megamenu-item">
-                                                <a class="megamenu-link" href="/sign-up.html">Sign up</a>
-                                            </li>
+                                            {% if user.is_authenticated %}
+                                                <li class="mb-2 megamenu-item">
+                                                    <a class="megamenu-link" href="{{ user.get_absolute_url }}">{{ user.get_username }}</a>
+                                                </li>
+                                            {% else %}
+                                                <li class="mb-2 megamenu-item">
+                                                    <a class="megamenu-link" href="{% url 'login'%}?next={{request.path}}">Sign in</a>
+                                                </li>
+                                            {% endif %}
                                         </ul>
                                     </div>
                                 </div>
@@ -129,10 +138,10 @@
                     </ul>
                 </div>
                 <div class="d-flex align-items-center">
-                    <a href="{% url 'logout' %}"
-                       class="btn btn-outline-gray-100 d-none d-lg-inline me-md-3"><span class="fas fa-sign-out-alt me-2"></span> Logout</a>
-                    <a href="https://appseed.us/product/pixel-bootstrap/django/" 
-                       target="_blank" class="btn btn-tertiary"><i class="fas fa-cloud-download-alt me-2"></i> Download</a>
+                    {% if user.is_authenticated %}
+                        <a href="{% url 'logout' %}"
+                           class="btn btn-outline-gray-100 d-none d-lg-inline me-md-3"><span class="fas fa-sign-out-alt me-2"></span> Logout</a>
+                    {% endif %}
                     <button class="navbar-toggler ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navbar_global" aria-controls="navbar_global" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
