--- a/templates/base2.html
+++ b/templates/base2.html
@@ -68,17 +68,30 @@
 </head>
 <body>
 
-    {% include 'includes/navigation.html' %}
+  {% include 'includes/navigation.html' %}
 
-    {% block content %}{% endblock content %}
+  <section class="section-header overflow-hidden pt-7 pt-lg-8 pb-9 pb-lg-12 bg-danger text-white">
+    <div class="container">
+      <div class="row">
+        <div class="col-12 text-left">
 
-    {% include 'includes/scripts.html' %}
+          {% block content %}{% endblock content %}
 
-    {% include 'includes/footer.html' %}
+          {% block pagination %}
+            {% include "includes/pagination.html" %}
+          {% endblock %}
 
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Specific Page JS goes HERE  -->
-    {% block javascripts %}{% endblock javascripts %}
+  {% include 'includes/scripts.html' %}
+
+  {% include 'includes/footer.html' %}
+
+  <!-- Specific Page JS goes HERE  -->
+  {% block javascripts %}{% endblock javascripts %}
 
 </body>
 </html>
