--- a/templates/includes/pagination.html
+++ b/templates/includes/pagination.html
@@ -1,6 +1,6 @@
 {% load query_transform %}
 {% if is_paginated %}
-  <ul class="pagination justify-content-center text-black">
+  <ul class="pagination text-black">
     {% if page_obj.has_previous %}
       <li class="page-item">
         <a href="?{% query_transform request page=page_obj.previous_page_number %}" class="page-link">prev</a>
