--- a/templates/catalog/genre_form.html
+++ b/templates/catalog/genre_form.html
@@ -7,6 +7,6 @@
     {% csrf_token %}
     {{ form|crispy }}
 
-    <input type="submit" value="{{ object|yesno:"Update,Create" }}">
+    <input type="submit" value="{{ object|yesno:"Update,Create" }}" class="btn btn-primary">
   </form>
 {% endblock %}
