--- a/templates/catalog/musician_detail.html
+++ b/templates/catalog/musician_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load crispy_forms_filters %}
 
 {% block content %}
 
@@ -26,10 +27,7 @@
   </ul>
   {% endif %}
 
-  <form method="get" class="form-inline">
-    {{ filter.form.as_p }}
-    <input type="submit" value="Filter" />
-  </form>
+  {% include "includes/filter.html" %}
 
   {% if filter.qs %}
     <h3>Songs</h3>
