--- a/templates/catalog/musician_detail.html
+++ b/templates/catalog/musician_detail.html
@@ -8,7 +8,7 @@
     <a href="{% url 'catalog:musician-update' pk=musician.id %}" class="btn btn-primary link-to-page">
       Update
     </a>
-    <a href="{% url 'catalog:musician-delete' pk=musician.id %}" class="btn btn-danger link-to-page">
+    <a href="{% url 'catalog:musician-delete' pk=musician.id %}" class="btn btn-warning link-to-page">
       Delete
     </a>
   </h1>
