--- a/templates/catalog/performance_confirm_delete.html
+++ b/templates/catalog/performance_confirm_delete.html
@@ -6,6 +6,6 @@
   <form action="" method="post">
     {% csrf_token %}
 
-    <input type="submit" value="Delete" class="btn btn-danger">
+    <input type="submit" value="Delete" class="btn btn-warning">
   </form>
 {% endblock %}
