--- a/templates/catalog/song_confirm_delete.html
+++ b/templates/catalog/song_confirm_delete.html
@@ -2,10 +2,10 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
-  <h1>Delete {{ song.name }}?</h1>
+  <h1>Delete "{{ song.name }}" song?</h1>
   <form action="" method="post">
     {% csrf_token %}
 
-    <input type="submit" value="Delete" class="btn btn-danger">
+    <input type="submit" value="Delete" class="btn btn-warning">
   </form>
 {% endblock %}
