--- a/templates/catalog/song_detail.html
+++ b/templates/catalog/song_detail.html
@@ -6,7 +6,7 @@
     <a href="{% url 'catalog:song-update' pk=song.id %}" class="btn btn-primary link-to-page">
       Update
     </a>
-    <a href="{% url 'catalog:song-delete' pk=song.id %}" class="btn btn-danger link-to-page">
+    <a href="{% url 'catalog:song-delete' pk=song.id %}" class="btn btn-warning link-to-page">
       Delete
     </a>
   </h1>
