--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,77 +1,56 @@
     <footer class="footer pt-6 pb-5 bg-dark text-white">
         <div class="container">
-            <div class="row">
+            <div class="row justify-content-center">
                 <div class="col-md-4">
                     <img class="navbar-brand-dark mb-4" height="35" src="{{ ASSETS_ROOT }}/img/brand/light.svg"
                         alt="Logo light">
-                    <p>Pixel is a free and open source Bootstrap 5 UI Kit that will help you prototype and build beautiful website pages and applications.</p>
+                    <p>"Rattle" music school service for managing catalog of musicians and their works.</p>
                     <ul class="social-buttons mb-5 mb-lg-0">
                         <li>
-                            <a href="https://twitter.com/themesberg" aria-label="twitter social link"
+                            <a href="#" aria-label="twitter social link"
                                 class="icon-white me-2">
                                 <span class="fab fa-twitter"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.facebook.com/themesberg/" class="icon-white me-2"
+                            <a href="#" class="icon-white me-2"
                                 aria-label="facebook social link">
                                 <span class="fab fa-facebook"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://github.com/themesberg" aria-label="github social link" class="icon-white me-2">
+                            <a href="https://github.com/vlodek69" aria-label="github social link" class="icon-white me-2">
                                 <span class="fab fa-github"></span>
                             </a>
                         </li>
                         <li>
-                            <a href="https://dribbble.com/themesberg" class="icon-white" aria-label="dribbble social link">
+                            <a href="#" class="icon-white" aria-label="dribbble social link">
                                 <span class="fab fa-dribbble"></span>
                             </a>
                         </li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-2 mb-5 mb-lg-0">
-                    <span class="h5">Themesberg</span>
+                    <span class="h5">Rattle</span>
                     <ul class="footer-links mt-2">
-                        <li><a target="_blank" href="https://themesberg.com/blog">Blog</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/products">Products</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/about">About Us</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/contact">Contact Us</a></li>
+                        <li><a target="_blank" href="#">Blog</a></li>
+                        <li><a target="_blank" href="#">Products</a></li>
+                        <li><a target="_blank" href="#">About Us</a></li>
+                        <li><a target="_blank" href="#">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="col-6 col-md-2 mb-5 mb-lg-0">
                     <span class="h5">Other</span>
                     <ul class="footer-links mt-2">
-                        <li><a href="https://themesberg.com/docs/bootstrap-5/pixel/getting-started/quick-start/"
+                        <li><a href="#"
                                 target="_blank">Docs</a></li>
-                        <li><a href="https://themesberg.com/docs/pixel-bootstrap/getting-started/changelog"
+                        <li><a href="#"
                                 target="_blank">Changelog</a></li>
-                        <li><a target="_blank" href="https://themesberg.com/licensing">License</a>
+                        <li><a target="_blank" href="#">License</a>
                         </li>
                         <li><a target="_blank"
-                                href="https://github.com/themesberg/pixel-bootstrap-ui-kit/issues">Support</a></li>
+                                href="#">Support</a></li>
                     </ul>
-                </div>
-                <div class="col-12 col-md-4 mb-5 mb-lg-0">
-                    <span class="h5">Subscribe</span>
-                    <p class="text-muted font-small mt-2">Join our mailing list. We write rarely, but only the best content.
-                    </p>
-                    <form action="#">
-                        <div class="form-row mb-2">
-                            <div class="col-12">
-                                <label class="h6 fw-normal text-muted d-none" for="exampleInputEmail3">Email address</label>
-                                <input type="email" class="form-control mb-2" placeholder="example@company.com" name="email"
-                                    aria-label="Subscribe form" id="exampleInputEmail3" required>
-                            </div>
-                            <div class="col-12 d-grid">
-                                <button type="submit" class="btn btn-tertiary" data-loading-text="Sending">
-                                    <span>Subscribe</span>
-                                </button>
-                            </div>
-                        </div>
-                    </form>
-                    <p class="text-muted font-small m-0">We’ll never share your details. See our <a class="text-white"
-                            href="#">Privacy Policy</a></p>
                 </div>
             </div>
             <hr class="bg-secondary my-3 my-lg-5">
