--- a/templates/catalog/song_filter.html
+++ b/templates/catalog/song_filter.html
@@ -30,7 +30,7 @@
           <td>-</td>
         {% endif %}
         {% if song.albums.all %}
-          <td>{{ song.album_list|join:", " }}</td>
+          <td>{{ song.albums.all|join:", " }}</td>
         {% else %}
           <td>-</td>
         {% endif %}
