Delete unused static files, reformat html files

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,71 +1,67 @@
-    <footer class="footer pt-6 pb-5 bg-dark text-white">
-        <div class="container">
-            <div class="row justify-content-center">
-                <div class="col-md-4">
-                    <img class="navbar-brand-dark mb-4" height="35" src="{{ ASSETS_ROOT }}/img/brand/light.svg"
-                        alt="Logo light">
-                    <p>"Rattle" music school service for managing catalog of musicians and their works.</p>
-                    <ul class="social-buttons mb-5 mb-lg-0">
-                        <li>
-                            <a href="#" aria-label="twitter social link"
-                                class="icon-white me-2">
-                                <span class="fab fa-twitter"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="icon-white me-2"
-                                aria-label="facebook social link">
-                                <span class="fab fa-facebook"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://github.com/vlodek69" aria-label="github social link" class="icon-white me-2">
-                                <span class="fab fa-github"></span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#" class="icon-white" aria-label="dribbble social link">
-                                <span class="fab fa-dribbble"></span>
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md-2 mb-5 mb-lg-0">
-                    <span class="h5">Rattle</span>
-                    <ul class="footer-links mt-2">
-                        <li><a target="_blank" href="#">Blog</a></li>
-                        <li><a target="_blank" href="#">Products</a></li>
-                        <li><a target="_blank" href="#">About Us</a></li>
-                        <li><a target="_blank" href="#">Contact Us</a></li>
-                    </ul>
-                </div>
-                <div class="col-6 col-md-2 mb-5 mb-lg-0">
-                    <span class="h5">Other</span>
-                    <ul class="footer-links mt-2">
-                        <li><a href="#"
-                                target="_blank">Docs</a></li>
-                        <li><a href="#"
-                                target="_blank">Changelog</a></li>
-                        <li><a target="_blank" href="#">License</a>
-                        </li>
-                        <li><a target="_blank"
-                                href="#">Support</a></li>
-                    </ul>
-                </div>
-            </div>
-            <hr class="bg-secondary my-3 my-lg-5">
-            <div class="row">
-                <div class="col mb-md-0">
-                    <a href="https://themesberg.com" target="_blank" class="d-flex justify-content-center mb-3">
-                        <img src="{{ ASSETS_ROOT }}/img/themesberg.svg" height="30" class="me-2" alt="Themesberg Logo">
-                        <p class="text-white fw-bold footer-logo-text m-0">Themesberg</p>
-                    </a>
-                    <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
-                        <p class="fw-normal font-small mb-0">
-                            &copy; Themesberg - coded by AppSeed.
-                        </p>
-                    </div>
-                </div>
-            </div>
+<footer class="footer pt-6 pb-5 bg-dark text-white">
+  <div class="container">
+    <div class="row justify-content-center">
+      <div class="col-md-4">
+        <img class="navbar-brand-dark mb-4" height="35" src="{{ ASSETS_ROOT }}/img/brand/light.svg"
+            alt="Logo light">
+        <p>"Rattle" music school service for managing catalog of musicians and their works.</p>
+        <ul class="social-buttons mb-5 mb-lg-0">
+          <li>
+            <a href="#" aria-label="twitter social link"
+              class="icon-white me-2">
+              <span class="fab fa-twitter"></span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon-white me-2"
+              aria-label="facebook social link">
+              <span class="fab fa-facebook"></span>
+            </a>
+          </li>
+          <li>
+            <a href="https://github.com/vlodek69" aria-label="github social link" class="icon-white me-2">
+              <span class="fab fa-github"></span>
+            </a>
+          </li>
+          <li>
+            <a href="#" class="icon-white" aria-label="dribbble social link">
+              <span class="fab fa-dribbble"></span>
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="col-6 col-md-2 mb-5 mb-lg-0">
+        <span class="h5">Rattle</span>
+        <ul class="footer-links mt-2">
+          <li><a target="_blank" href="#">Blog</a></li>
+          <li><a target="_blank" href="#">Products</a></li>
+          <li><a target="_blank" href="#">About Us</a></li>
+          <li><a target="_blank" href="#">Contact Us</a></li>
+        </ul>
+      </div>
+      <div class="col-6 col-md-2 mb-5 mb-lg-0">
+        <span class="h5">Other</span>
+        <ul class="footer-links mt-2">
+          <li><a href="#" target="_blank">Docs</a></li>
+          <li><a href="#" target="_blank">Changelog</a></li>
+          <li><a target="_blank" href="#">License</a></li>
+          <li><a target="_blank" href="#">Support</a></li>
+        </ul>
+      </div>
+    </div>
+    <hr class="bg-secondary my-3 my-lg-5">
+    <div class="row">
+      <div class="col mb-md-0">
+        <a href="https://themesberg.com" target="_blank" class="d-flex justify-content-center mb-3">
+          <img src="{{ ASSETS_ROOT }}/img/themesberg.svg" height="30" class="me-2" alt="Themesberg Logo">
+          <p class="text-white fw-bold footer-logo-text m-0">Themesberg</p>
+        </a>
+        <div class="d-flex text-center justify-content-center align-items-center" role="contentinfo">
+          <p class="fw-normal font-small mb-0">
+            &copy; Themesberg - coded by AppSeed.
+          </p>
         </div>
-    </footer>
+      </div>
+    </div>
+  </div>
+</footer>
