--- a/templates/catalog/musician_detail.html
+++ b/templates/catalog/musician_detail.html
@@ -5,6 +5,7 @@
 
   <h1>
     {{ musician.full_name }}
+    {% if musician.pseudonym %}({{ musician.pseudonym }}){% endif %}
     <a href="{% url 'catalog:musician-update' pk=musician.id %}" class="btn btn-primary link-to-page">
       Update
     </a>
@@ -27,10 +28,11 @@
   </ul>
   {% endif %}
 
-  {% include "includes/filter.html" %}
-
   {% if filter.qs %}
     <h3>Songs</h3>
+
+    {% include "includes/filter.html" %}
+
     <table class="table">
       <tr>
         <th>ID</th>
