--- a/templates/catalog/album_form.html
+++ b/templates/catalog/album_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_alt_bgc.html" %}
 {% load crispy_forms_filters %}
 
 {% block content %}
@@ -20,6 +20,6 @@
     {% csrf_token %}
     {{ genre_creation_form|crispy }}
 
-    <input type="submit" value="Create genre" class="btn btn-primary">
+    <input type="submit" value="Create genre" class="btn btn-warning">
   </form>
 {% endblock %}
