--- a/templates/catalog/musician_form.html
+++ b/templates/catalog/musician_form.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "base_alt_bgc.html" %}
 {% load crispy_forms_filters %}
 
 {% block content %}
@@ -8,7 +8,7 @@
     {% csrf_token %}
     {{ form|crispy }}
 
-    <input type="submit" value="Submit" class="btn btn-primary">
+    <input type="submit" value="Submit" class="btn btn-warning">
   </form>
 
 {% endblock %}
