Update icons in index.html

--- a/templates/catalog/index.html
+++ b/templates/catalog/index.html
@@ -29,21 +29,21 @@
         <div class="row justify-content-center mb-5 mb-lg-6">
           <div class="col-6 col-md-3 text-center mb-4">
             <div class="icon icon-shape icon-lg bg-white shadow-lg border-light rounded-circle mb-4">
-              <span class="fas fa-puzzle-piece text-tertiary"></span>
+              <span class="fas fa-solid fa-podcast text-tertiary"></span>
             </div>
             <h3 class="fw-bolder">{{ num_musicians }}</h3>
             <p class="text-gray">Musicians</p>
           </div>
           <div class="col-6 col-md-3 text-center mb-4">
             <div class="icon icon-shape icon-lg bg-white shadow-lg border-light rounded-circle mb-4">
-              <span class="fas fa-pager text-tertiary"></span>
+              <span class="fas fa-solid fa-compact-disc text-tertiary"></span>
             </div>
             <h3 class="fw-bolder">{{ num_bands }}</h3>
             <p class="text-gray">Bands</p>
           </div>
           <div class="col-6 col-md-3 text-center">
             <div class="icon icon-shape icon-lg bg-white shadow-lg border-light rounded-circle mb-4">
-              <span class="fab fa-sass text-tertiary"></span>
+              <span class="fab fas fa-solid fa-file-audio text-tertiary"></span>
             </div>
             <h3 class="fw-bolder">{{ num_songs }}</h3>
             <p class="text-gray">Songs</p>
