--- a/templates/catalog/album_form.html
+++ b/templates/catalog/album_form.html
@@ -18,7 +18,7 @@
   </h1>
   <form action="" method="post">
     {% csrf_token %}
-    {{ genre_creation_form|crispy }}
+    {{ genre_form|crispy }}
 
     <input type="submit" value="Create genre" class="btn btn-warning">
   </form>
