Replace album_update_view with AlbumUpdateView class

--- a/templates/catalog/album_form.html
+++ b/templates/catalog/album_form.html
@@ -7,7 +7,7 @@
     {% csrf_token %}
     {{ album_form|crispy }}
 
-    <input type="submit" value="{{ album_form.initial|yesno:"Update,Create" }} album" class="btn btn-primary">
+    <input type="submit" value="{{ album_form.initial|yesno:"Update,Create" }} album" class="btn btn-warning">
   </form>
 
   <br>
